# obligatorio-ia-251344_245213_251684

ejercicio1/: README.md  analyze_results.py  continuous_descent_env.ipynb  descent_env.py  hyperparams_q-learning_clásico.csv  hyperparams_stochastic_q-learning.csv  pyproject.toml  q_learning_agent.py  stochastic_q_learning_agent.py  test_agent.py  train_numbered.py  train_progressive_qlearning.py  train_progressive_stochastic_qlearning.py
ejercicio1/models/: entrenamiento_1.pkl  progressive_qlearning.pkl  progressive_stochastic_qlearning.pkl
ejercicio2/: README.md  agent.py  expectimax_agent.py  minimax_agent.py  play.py  pyproject.toml  random_agent.py  run_all.py  tactix.ipynb  tactix_env.py  tournament.py  trainer_agent.py
