[project]
name = "descent-env"
version = "0.1.0"
description = ""
authors = [
    {name = "iturbideM",email = "martiniturbidenoria@gmail.com"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "bluesky-gym (>=0.1.0,<0.2.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "gymnasium (>=0.29.0,<1.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false